# sequila-native

./: .gitignore  .history  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  a.txt  b.txt  output.txt
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: benchmark.yml  ci.yml  macos.yml
dev/bench/: data.js  index.html
openspec/: project.md
openspec/changes/archive/2025-10-30-upgrade-datafusion-50/: design.md  proposal.md
openspec/changes/archive/2025-10-30-upgrade-datafusion-50/specs/datafusion-integration/: spec.md
openspec/changes/upgrade-datafusion-50/: tasks.md
openspec/changes/upgrade-datafusion-50/specs/datafusion-integration/: spec.md
openspec/specs/datafusion-integration/: spec.md
queries/: q1-ailist.sql  q1-coitrees.sql  q1-lapper.sql  q1-sortedcoitrees.sql
sandbox/: datafusion_baseline.md  duckdb_baseline.txt
sequila/: .history
sequila/sequila-cli/: Cargo.toml  build.rs
sequila/sequila-cli/include/: IITree.h  IITreeBFS.h
sequila/sequila-cli/src/: main.rs
sequila/sequila-cli/src/qacoitrees/: mod.rs  nosimd.rs
sequila/sequila-cli/src/qbio/: array_backed_interval_tree.rs  mod.rs
sequila/sequila-core/: Cargo.toml
sequila/sequila-core/benches/: databio_benchmark.rs  datafusion_optimized_benchmark.rs  optimization_comparison_benchmark.rs  quick_optimization_test.rs
sequila/sequila-core/src/: lib.rs  session_context.rs
sequila/sequila-core/src/physical_planner/: interval_join.rs  intervals.rs  mod.rs  sequila_physical_planner.rs  sequila_query_planner.rs
sequila/sequila-core/src/physical_planner/joins/: interval_join.rs  mod.rs  range_join.rs  utils.rs
sequila/sequila-core/src/session_context/: mod.rs  sequila_context_ext.rs
sequila/sequila-core/superintervals/examples/: bed-intersect-si.rs
sequila/sequila-core/superintervals/src/: superintervals.rs
sequila/sequila-core/superintervals/src/variants/: superintervals_var.rs
sequila/sequila-core/tests/: integration_test.rs
testing/data/interval/: reads.csv  targets.csv
