[workspace.package]
edition = "2021"
homepage = "https://biodatageeks.github.io/sequila/"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/biodatageeks/sequila-native.git"
version = "0.1.0"
rust-version = "1.76"

[workspace]
members = ["sequila/sequila-cli", "sequila/sequila-core"]
resolver = "2"

[workspace.dependencies]
sequila-core = { path = "sequila/sequila-core" }
sequila-cli = { path = "sequila/sequila-cli" }
datafusion = { version = "50.3.0" }
datafusion-cli = { version = "50.3.0" }
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
env_logger = "0.11.5"
log = "0.4.22"
emojis = "0.6.3"

# https://doc.rust-lang.org/cargo/reference/profiles.html#release
[profile.profiling]
inherits = "release"
debug = true