[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "sequila-cli"
readme.workspace = true
repository.workspace = true
version.workspace = true



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "35.0.0"
exon = "0.9.3"
tokio = "1.36.0"
sequila-core = { path = "../sequila-core" }
datafusion-cli = "35.0.0"
log = "0.4.20"
env_logger = "0.11.1"
emojis = "0.6.1"
