[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "sequila-cli"
readme.workspace = true
repository.workspace = true
version.workspace = true

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "35.0.0"
exon = "0.9.3"
tokio = "1.36.0"
sequila-core = { path = "../sequila-core" }
datafusion-cli = "35.0.0"
log = "0.4.20"
env_logger = "0.11.1"
emojis = "0.6.1"
bio = "1.5.0"
csv = "1.3.0"
memmap2 = "0.9.4"
coitrees = "0.4.0"
fnv = "1.0.7"
cxx = "1.0.116"
serde = { version = "1.0.196", features = ["derive"] }

[build-dependencies]
cxx-build = "1.0.116"

