[package]
name = "sequila-core"
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
datafusion = "35.0.0"
log = "0.4.20"
env_logger = "0.11.1"
emojis = "0.6.1"
arrow = "50.0.0"
tokio = "1.36.0"
ahash = "0.8.7"
futures = { version = "0.3.30", features = [] }
hashbrown = "0.14.3"
parking_lot = "0.12.1"
rstest = "0.18.2"
rstest_reuse = "0.6.0"