[package]
name = "sequila-core"
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
datafusion.workspace = true
log.workspace = true
env_logger.workspace = true
emojis.workspace = true
arrow.workspace = true
tokio.workspace = true
ahash = "0.8.7"
futures = { version = "0.3.30", features = [] }
hashbrown = "0.14.3"
parking_lot = "0.12.1"
rstest = "0.18.2"
rstest_reuse = "0.6.0"
coitrees = "0.4.0"
fnv = "1.0.7"
bio = "1.5.0"