[package]
name = "sequila-core"
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.81"
datafusion.workspace = true
log.workspace = true
emojis.workspace = true
tokio.workspace = true
ahash = "0.8.11"
futures = { version = "0.3.30", features = [] }
hashbrown = "0.14.5"
parking_lot = "0.12.3"
coitrees = "0.4.0"
fnv = "1.0.7"
bio = "2.0.1"
rand = "0.8.5"
rust-lapper = "1.1.0"
superintervals = { path = "superintervals" }
# mlx-rs = { version = "0.25.1", features = ["metal"] }
# MLX is complex to build, so using ARM Neon SIMD for hardware acceleration

[dev-dependencies]
rstest = "0.22.0"
rstest_reuse = "0.7.0"
env_logger.workspace = true
criterion = { version = "0.5.1",features = ["async_tokio"] }
strum = "0.26.3"
strum_macros = "0.26.3"

[[bench]]
name = "databio_benchmark"
harness = false


[[bench]]
name = "optimization_comparison_benchmark"
harness = false

[[bench]]
name = "quick_optimization_test"
harness = false

[[bench]]
name = "datafusion_optimized_benchmark"
harness = false
